--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,23 +8,22 @@ services:
       POSTGRES_USER: dockerized
       POSTGRES_PASSWORD: test_db_password
     ports: 
-      - '5432:5432'
+      - '5434:5432'
     volumes:
       - dockerized-postgres:/var/lib/postgresql/data
 
   redis:
     image: redis:7.0
     ports:
-      - '6379:6379'
+      - '6380:6379'
     volumes:
       - dockerized-redis:/var/lib/redis/data
 
   dockerized:
     build:
       context: .
-      dockerfile: ./Dockerfile.rails
     volumes:
-      - ./dockerized:/opt/app
+      - .:/opt/app
     links:
       - postgres
       - redis
